--- a/src/app/design/frontend/base/default/layout/ikom_codicefiscale.xml
+++ b/src/app/design/frontend/base/default/layout/ikom_codicefiscale.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout version="0.1.0">
-	<checkout_onepage_billing>
+	<checkout_onepage_index>
 		<reference name="head">
 			<action method="addJs"><script>ikom/cf.js</script></action>
 		</reference>
-	</checkout_onepage_billing>
+	</checkout_onepage_index>
 </layout>
 	
